<resources>
    <!--App Strings-->
    <string name="app_name">Constituent</string>
    <string name="app_title">GMS</string>
    <string name="app_main_title">GMS - Constituent</string>


    <!--General Strings-->
    <string name="progress_loading">Loading…</string>
    <string name="alert_button_ok">OK</string>
    <string name="alert_button_cancel">Cancel</string>
    <string name="alert_button_yes">Yes</string>
    <string name="alert_button_no">No</string>
    <string name="empty" />
    <string name="error_no_net">No internet access. Please check your connection and try again.</string>
    <string name="error_occurred">Failed to connect to the server. Please try again.</string>
    <string name="error_entry">Entry Invalid</string>
    <string name="empty_entry">Field cannot be empty</string>
    <string name="error_number">Enter valid phone number</string>

    <!--Dashboard Strings-->
    <string name="menu_home">Home</string>
    <string name="menu_news">News</string>
    <string name="menu_profile">Profile</string>
    <string name="title_notifications">Notifications</string>

    <!--Welcome Strings-->
    <string name="welcome_gms">Grievance Management System</string>
    <string name="welcome_start">Get Started</string>
    <string name="gms_content">Resolve constituents complaints and Stay in touch with your local representative</string>

    <string name="slide_1_title">Grievance</string>
    <string name="slide_1_desc">Resolve constituent\'s complaints</string>

    <string name="slide_2_title">Constituency</string>
    <string name="slide_2_desc">See more content related to constituency</string>

    <string name="slide_3_title">Stay Connected</string>
    <string name="slide_3_desc">Stay in touch with your local representative</string>

    <!--Login Page Strings-->
    <string name="login_title">Login</string>
    <string name="select_constituency">Select Constituency</string>
    <string name="select_constituency_alert">Please select constituency before proceeding</string>
    <string name="country_code">+91</string>
    <string name="login_text_one">Login to your Account</string>
    <string name="login_text_two">An OTP will be send to your mobile number entered</string>


    <!--OTP Page Strings-->
    <string name="verification_title">Verification Code</string>
    <string name="verification_heading">Verification Code</string>
    <string name="verification_line">We have sent you a 4 digit code to your phone number Please enter the verification code</string>
    <string name="not_received">Didn\'t receive OTP?</string>
    <string name="verify">Verify &amp; Continue</string>
    <string name="resend">Resend</string>


    <!--User Selection Strings-->
    <string name="user_selection_title">Select Constituent</string>
    <string name="user_serial_number_txt">Serial number - </string>
    <string name="user_dob_txt">Date of birth - </string>


    <!--Home Page Strings-->
    <string name="home_title">Home - Dashboard</string>
    <string name="dashboard_grievance">Grievances</string>
    <string name="dashboard_meeting">Meetings</string>
    <string name="dashboard_plant_donation">Plant Donation</string>
    <string name="hi">Hi</string>
    <string name="grievance_count">Grievance Count</string>
    <string name="count" />
    <string name="meeting_count">Meeting Count</string>


    <!--Plant Donation Page Strings-->
    <string name="plant_donation_title">Plant Donation</string>
    <string name="plant_name_txt">Plant Name</string>
    <string name="plant_count_txt">Plant Count</string>
    <string name="plant_date_txt">Received On</string>


    <!--User Selection Strings-->
    <string name="news_detail_title">News</string>


    <!--Grievance Page Strings-->
    <string name="grievance_title">Grievances</string>
    <string name="grievance_detail_title">Details of Grievance</string>
    <string name="no_grievance">No grievance found</string>
    <string name="seeker_type">Seeker Type</string>
    <string name="description">Description</string>
    <string name="reference">Reference Number</string>
    <string name="petition">Petition</string>
    <string name="enquiry">Enquiry</string>
    <string name="petition_num">Petition Number</string>
    <string name="enquiry_num">Enquiry Number</string>

    <!--Notification Page Strings-->
    <string name="meeting_title">Meetings</string>
    <string name="meeting_detail_title">Details of Meeting</string>


    <!--Notification Page Strings-->
    <string name="notification_title">Notification</string>
    <string name="notification_sent_on">Notification sent on</string>


    <!--Profile Page Strings-->
    <string name="profile_title">User Profile</string>
    <string name="profile">Profile Info</string>
    <string name="constituency">Constituency Info</string>
    <string name="father_or_husband">Father or husband Name</string>
    <string name="guardian">Guardian name</string>
    <string name="email">Email ID</string>
    <string name="phone">Phone Number</string>
    <string name="whatsapp">Whatsapp Number</string>
    <string name="dob">Date of Birth</string>
    <string name="gender">Gender</string>
    <string name="religion">Religion</string>
    <string name="address">Address</string>
    <string name="pin">Pincode</string>
    <string name="voterid">Voter ID</string>
    <string name="aadhaar">Aadhaar Number</string>
    <string name="general">General Setting</string>
    <string name="share">Share app</string>

    <!--Settings Page Strings-->
    <string name="change_user">Change Users</string>
    <string name="about">About us</string>
    <string name="terms"><![CDATA[Terms & Conditions]]></string>
    <string name="privacy"><![CDATA[Privacy & Security]]></string>
    <string name="support"><![CDATA[Help & Support]]></string>
    <string name="sign_out">Logout</string>
    <string name="sign_out_alert">Do you really want to signout?</string>
    <string name="menu_settings">Settings</string>
    <string name="account">Account Settings</string>

    <!--Constituency Page Strings-->
    <string name="constituency_name">Constituency Name</string>
    <string name="ward">Ward</string>
    <string name="booth">Booth Name</string>
    <string name="booth_address">Booth Address</string>
    <string name="serial">Serial Number</string>

    <!--About Us Page Strings-->
    <string name="about_us_title">About Us</string>
    <string name="about_us_content">About Us content yet to be finalised</string>

    <!--Terms and Conditions Page Strings-->
    <string name="terms_title">Terms and Conditions</string>
    <string name="terms_content">Terms content yet to be finalised</string>
    <string name="constituency_id">Constituency ID</string>
    <string name="id_content">Please enter the Constituency Id given to you for login</string>
    <string name="btn_next">Lets get Started</string>
    <string name="welcome">Welcome</string>
    <string name="requested">Requested</string>
    <string name="complete">Completed</string>
    <string name="schedule">Scheduled</string>
    <string name="req_date">Requested on</string>
    <string name="meet_date">Meeting Date</string>
    <string name="created">Created by</string>
    <string name="user">Super Admin</string>
    <string name="created_on">Created On</string>
    <string name="updated_on">Updated On</string>


</resources>