<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColorHint="@color/black">

                <EditText
                    android:id="@+id/father_husband_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorPrimary"
                    android:clickable="false"
                    android:focusable="false"
                    android:hint="@string/father_or_husband"
                    android:inputType="text"
                    android:maxLength="30"
                    android:singleLine="true"
                    android:textSize="16sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:visibility="gone"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColorHint="@color/black">

                <EditText
                    android:id="@+id/guardian_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorPrimary"
                    android:clickable="false"
                    android:focusable="false"
                    android:hint="@string/guardian"
                    android:inputType="text"
                    android:maxLength="30"
                    android:singleLine="true"
                    android:textSize="16sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColorHint="@color/black">

                <EditText
                    android:id="@+id/email_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorPrimary"
                    android:clickable="false"
                    android:focusable="false"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:maxLength="30"
                    android:singleLine="true"
                    android:textSize="16sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="15dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:weightSum="1">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:layout_marginEnd="10dp"
                    android:textColorHint="@color/black">

                    <EditText
                        android:id="@+id/phone_no"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/colorPrimary"
                        android:clickable="false"
                        android:focusable="false"
                        android:hint="@string/phone"
                        android:inputType="text"
                        android:maxLength="30"
                        android:singleLine="true"
                        android:textSize="16sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"                    android:layout_weight="0.5"
                    android:layout_marginStart="10dp"
                    android:textColorHint="@color/black">

                    <EditText
                        android:id="@+id/whatsapp_no"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/colorPrimary"
                        android:clickable="false"
                        android:focusable="false"
                        android:hint="@string/whatsapp"
                        android:inputType="text"
                        android:maxLength="30"
                        android:singleLine="true"
                        android:textSize="16sp" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="15dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:weightSum="1">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:layout_marginEnd="10dp"
                    android:textColorHint="@color/black">

                    <EditText
                        android:id="@+id/dob"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/colorPrimary"
                        android:clickable="false"
                        android:focusable="false"
                        android:hint="@string/dob"
                        android:inputType="text"
                        android:maxLength="30"
                        android:singleLine="true"
                        android:textSize="16sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"                    android:layout_weight="0.5"
                    android:layout_marginStart="10dp"
                    android:textColorHint="@color/black">

                    <EditText
                        android:id="@+id/gender"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/colorPrimary"
                        android:clickable="false"
                        android:focusable="false"
                        android:hint="@string/gender"
                        android:inputType="text"
                        android:maxLength="30"
                        android:singleLine="true"
                        android:textSize="16sp" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColorHint="@color/black">

                <EditText
                    android:id="@+id/religion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorPrimary"
                    android:clickable="false"
                    android:focusable="false"
                    android:hint="@string/religion"
                    android:inputType="text"
                    android:maxLength="30"
                    android:singleLine="true"
                    android:textSize="16sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColorHint="@color/black">

                <EditText
                    android:id="@+id/address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorPrimary"
                    android:clickable="false"
                    android:focusable="false"
                    android:hint="@string/address"
                    android:inputType="text"
                    android:maxLength="30"
                    android:singleLine="true"
                    android:textSize="16sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColorHint="@color/black">

                <EditText
                    android:id="@+id/pincode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorPrimary"
                    android:clickable="false"
                    android:focusable="false"
                    android:hint="@string/pin"
                    android:inputType="text"
                    android:maxLength="30"
                    android:singleLine="true"
                    android:textSize="16sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColorHint="@color/black">

                <EditText
                    android:id="@+id/voter_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorPrimary"
                    android:clickable="false"
                    android:focusable="false"
                    android:hint="@string/voterid"
                    android:inputType="text"
                    android:maxLength="30"
                    android:singleLine="true"
                    android:textSize="16sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColorHint="@color/black">

                <EditText
                    android:id="@+id/aadhaar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorPrimary"
                    android:clickable="false"
                    android:focusable="false"
                    android:hint="@string/aadhaar"
                    android:inputType="text"
                    android:maxLength="30"
                    android:singleLine="true"
                    android:textSize="16sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/general"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/change_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:drawableEnd="@drawable/ic_dropdown_side"
                android:padding="10dp"
                android:textSize="16sp"
                android:text="@string/change_user"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/about_us"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:drawableEnd="@drawable/ic_dropdown_side"
                android:textSize="16sp"
                android:padding="10dp"
                android:text="@string/about"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/terms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:drawableEnd="@drawable/ic_dropdown_side"
                android:textSize="16sp"
                android:padding="10dp"
                android:text="@string/terms"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/share_app"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:drawableEnd="@drawable/ic_dropdown_side"
                android:textSize="16sp"
                android:padding="10dp"
                android:text="@string/share"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/sign_out"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:textSize="16sp"
                android:drawableEnd="@drawable/ic_dropdown_side"
                android:padding="10dp"
                android:text="@string/sign_out"
                android:textColor="@color/black" />

        </LinearLayout>


    </ScrollView>

</LinearLayout>