<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background_grey"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/toolbar_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="60dp" />

        <ImageView
            android:id="@+id/img_back"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:minHeight="60dp"
            android:padding="20dp"
            android:src="@drawable/ic_back" />

        <TextView
            android:id="@+id/tv_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/img_back"
            android:gravity="center_vertical"
            android:minHeight="60dp"
            android:padding="5dp"
            android:fontFamily="@font/regular"
            android:text="@string/dashboard_meeting"
            android:textColor="@color/black"
            android:textSize="20sp" />


    </RelativeLayout>

    <LinearLayout
        android:id="@+id/meeting_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        android:background="@color/line_grey"
        android:weightSum="1">

        <TextView
            android:id="@+id/request"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:gravity="center"
            android:fontFamily="@font/bold"
            android:layout_weight="0.33"
            android:text="@string/requested"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/schedule"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:gravity="center"
            android:fontFamily="@font/bold"
            android:layout_weight="0.33"
            android:text="@string/schedule"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/completed"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:gravity="center"
            android:fontFamily="@font/bold"
            android:layout_weight="0.34"
            android:text="@string/complete"
            android:textColor="@color/black"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/list_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible"
            android:scrollbars="vertical" />

    </LinearLayout>




</LinearLayout>