<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dashboard_banner"
    tools:showIn="@layout/activity_welcome">


<!--    <androidx.viewpager.widget.ViewPager-->
<!--        android:id="@+id/view_pager"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_above="@+id/layoutDots"/>-->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/shadow_round_top">

        <LinearLayout
            android:id="@+id/layoutDots"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:layout_marginHorizontal="50dp"
                android:fontFamily="@font/bold"
                android:gravity="center_horizontal"
                android:text="@string/welcome_gms"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="50dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:fontFamily="@font/regular"
                android:text="@string/gms_content"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/btn_next"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:paddingStart="40dp"
                android:paddingEnd="40dp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="10dp"
                android:elevation="6dp"
                android:textAllCaps="false"
                android:gravity="center"
                android:background="@drawable/default_logo"
                android:text="@string/welcome_start"
                android:textColor="@color/black" />

        </LinearLayout>



    </RelativeLayout>

</RelativeLayout>