<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="20dp"
    android:background="@drawable/shadow_round_top"
    android:elevation="20dp"
    android:gravity="bottom"
    android:orientation="vertical">

    <TextView
        android:id="@+id/dialogBox_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/select_constituency"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <androidx.appcompat.widget.SearchView
            android:id="@+id/search_constituent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/shadow_round"
            android:clickable="true"
            app:iconifiedByDefault="true"
            android:elevation="4dp"/>


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="1dp"
        android:background="@color/line_cosituency" />

    <ScrollView
        android:id="@+id/scrollList"
        android:layout_width="match_parent"
        android:layout_height="250dp">

        <LinearLayout
            android:id="@+id/list_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

    </ScrollView>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:background="@color/line_cosituency" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:id="@+id/selection_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:textStyle="bold"
            android:layout_centerVertical="true"
            android:layout_marginEnd="40dp"
            android:text="@string/alert_button_ok"
            android:textColor="@color/text_grey"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/selection_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="40dp"
            android:textStyle="bold"
            android:layout_toLeftOf="@+id/selection_done"
            android:text="@string/alert_button_cancel"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp" />

    </RelativeLayout>


</LinearLayout>